[package]
name = "tetra-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tetra = { path = "tetra" }

[dependencies]
tetra = { path = "tetra" }
xflags = "0.2.4"

[workspace]
members = [
  "tetra",
  "webserver",
]
